[package]
name = "clap_cmdline_helper"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="2.0.60",features=["extra-traits"]}
proc-macro2 = "1.0.81"
quote = "1.0.36"
clap = {version="4.5.4",features=["derive"]}

[lib]
proc-macro = true
